	Revert part of 2010-03-12 change to prevent an overwrite of a
	message which is outputted by `twittering-read-list-name'.

	* twittering-mode.el (twittering-http-default-sentinel): Check
	process-status before processing sentinel.

2010-03-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-generate-status-formater-base):
	fix the formater for "%FACE[...]{...}".

2010-03-12  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel):
	Revert part of 2010-03-06 change because the scheduled removing of
	public_timeline from twitter API had been canceled on 2010-03-11.

	* twittering-mode.el (twittering-other-user-list-interactive): Fix
	condition to detect a null string.
	(twittering-other-user-timeline-interactive): Likewise.
	(twittering-extract-timeline-spec): Modify the condition for
	detecting a null string same as others.
	(twittering-get-replied-statuses): Likewise.
	(twittering-generate-status-formater-base): Likewise.
	(twittering-search): Likewise.
	(twittering-follow): Likewise.
	(twittering-direct-message): Add the condition for `username' is
	nil.
	(twittering-reply-to-user): Likewise.
	(twittering-other-user-list-interactive): Likewise for
	`list-name'.

2010-03-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-update-status-format): kill
	newly generated `*Compile-Log*' buffer if it is empty.

	* twittering-mode.el (twittering-mode-init-variables): initialize
	account information explicitly.
	(twittering-get-username): simplified.
	(twittering-get-password): simplified.

2010-03-11  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-render-timeline): Call
	`twittering-show-replied-statuses' if necessary.
	(twittering-show-replied-tweets): New defvar.
	(twittering-get-replied-statuses): Add optional argument `count'.
	(twittering-show-replied-statuses): Likewise.
	(twittering-have-replied-statuses-p): New defun.