@@ -12,6 +12,11 @@
 	* twittering-mode.el (twittering-generate-status-formater-base):
 	fix the formater for "%FACE[...]{...}".
 
+2010-03-13  Satoshi Yatagawa  <yata_github@y.hauN.org>
+
+	* twittering-mode.el (twittering-make-display-spec-for-icon): Use
+	`create-animated-image' if present (on Emacs24 or later).
+
 2010-03-12  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-http-get-default-sentinel):
